@@ -1259,8 +1259,8 @@ NEARDATA struct permonst mons[] = {
         A(ATTK(AT_BITE, AD_PHYS, 1, 4), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
         SIZ(40, 20, MS_SQAWK, MZ_SMALL), 0, 0,
-        M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE, M2_DOMESTIC, M3_INFRAVISIBLE,
-        HI_DOMESTIC),
+        M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE | M1_FLY, M2_DOMESTIC,
+        M3_INFRAVISIBLE, HI_DOMESTIC),
     MON("raven", S_BAT, LVL(4, 20, 6, 0, 0), (G_GENO | 2),
         A(ATTK(AT_BITE, AD_PHYS, 1, 6), ATTK(AT_CLAW, AD_BLND, 1, 6), NO_ATTK,
           NO_ATTK, NO_ATTK, NO_ATTK),
@@ -1277,8 +1277,8 @@ NEARDATA struct permonst mons[] = {
         A(ATTK(AT_BITE, AD_PHYS, 1, 4), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
         SIZ(80, 30, MS_SQAWK, MZ_MEDIUM), 0, 0,
-        M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE, M2_DOMESTIC, M3_INFRAVISIBLE,
-        HI_DOMESTIC),
+        M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE | M1_FLY, M2_DOMESTIC,
+        M3_INFRAVISIBLE, HI_DOMESTIC),
     MON("vampire bat", S_BAT, LVL(5, 20, 6, 0, 0), (G_GENO | 2),
         A(ATTK(AT_BITE, AD_PHYS, 1, 6), ATTK(AT_BITE, AD_DRST, 0, 0), NO_ATTK,
           NO_ATTK, NO_ATTK, NO_ATTK),
@@ -1289,7 +1289,7 @@ NEARDATA struct permonst mons[] = {
         A(ATTK(AT_BITE, AD_PHYS, 2, 3), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
           NO_ATTK),
         SIZ(100, 50, MS_SQAWK, MZ_MEDIUM), 0, 0,
-        M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE, M2_STRONG | M2_DOMESTIC,
+        M1_ANIMAL | M1_NOHANDS | M1_CARNIVORE | M1_FLY, M2_STRONG | M2_DOMESTIC,
         M3_INFRAVISIBLE, HI_DOMESTIC),
     MON("phoenix", S_BAT, LVL(15, 20, -7, 40, 7), (G_GENO | G_NOCORPSE | 2),
         A(ATTK(AT_BITE, AD_FIRE, 2, 6), ATTK(AT_CLAW, AD_PHYS, 3, 6),
